Clean up going well, up to clear-card()

--- a/old.scss
+++ b/old.scss
@@ -11,7 +11,11 @@ $pale-orange: rgb(230, 100, 101);
 $clear: rgb(255,255,255,0);
 //FONTS
 $karla: 'Karla', sans-serif;
+$eczar: 'Eczar', serif;
 $rammetto: 'Rammetto One', cursive;
+$unica: 'Unica One', cursive;
+$dela: 'Dela Gothic One', cursive;
+$cousine: 'Cousine', monospace;
 $monaco: 'Monaco', monospace;
 ////////MIXINS
 //MOBILE
